--- a/breakfast.html
+++ b/breakfast.html
@@ -7,7 +7,7 @@
     <title>BREAKFAST</title>
     <link href="styles.css" rel="stylesheet" type="text/css" />
   </head>
-  <body>
+  <body >
     <div class="menu">
       <header>
         <h2> BREAK FAST</h2>
@@ -16,40 +16,63 @@
       <hr>
       <main>
         <section>
-          <h2>Coffee</h2>
-          <img src="20230223_122639-01.jpeg" alt="Tea " width="50%" height="auto" />
+            
+         <article class="item">
+            <p class="flavor"><b>ITEM</b></p><p class="price"><b>Rs</b></p>
+         </article>
+          <br>
+
           <article class="item">
-            <p class="flavor">French Vanilla</p><p class="price">3.00</p>
+            <p class="flavor">TEA</p><p class="price">10.00</p>
           </article>
           <article class="item">
-            <p class="flavor">Caramel Macchiato</p><p class="price">3.75</p>
+            <p class="flavor">SPECIAL TEA</p><p class="price">15.00</p>
           </article>
           <article class="item">
-            <p class="flavor">Pumpkin Spice</p><p class="price">3.50</p>
+            <p class="flavor">COFFEE</p><p class="price">30.00</p>
           </article>
           <article class="item">
-            <p class="flavor">Hazelnut</p><p class="price">4.00</p>
+            <p class="flavor">PLAIN ROTI</p><p class="price">6.00</p>
           </article>
           <article class="item">
-            <p class="flavor">Mocha</p><p class="price">4.50</p>
+            <p class="flavor">ALU PARATHA</p><p class="price">50.00</p>
+          </article>
+          <article class="item">
+            <p class="flavor">PANEER PARATHA</p><p class="price">70.00</p>
+          </article>
+          <article class="item">
+            <p class="flavor">TANDOORI ROTI</p><p class="price">12.00</p>
+          </article>
+          <article class="item">
+            <p class="flavor">RUMALI ROTI</p><p class="price">20.00</p>
+          </article>
+          <article class="item">
+            <p class="flavor">LUCHHA PARATHA</p><p class="price">60.00</p>
+          </article>
+          <article class="item">
+            <p class="flavor">MUTTON PARATHA</p><p class="price">120.00</p>
+          </article>
+          <article class="item">
+            <p class="flavor">CHICKEN PARATHA</p><p class="price">90.00</p>
+          </article>
+          <article class="item">
+            <p class="flavor">BUTTER NUN</p><p class="price">60.00</p>
+          </article>
+          <article class="item">
+            <p class="flavor">GARLIC NUN</p><p class="price">70.00</p>
+          </article>
+          <article class="item">
+            <p class="flavor">CIG NUN</p><p class="price">80.00</p>
+          </article>
+          <article class="item">
+            <p class="flavor">PLAIN NUN</p><p class="price">50.00</p>
+          </article>
+          <article class="item">
+            <p class="flavor">MASHALA KULCHA</p><p class="price">65.00</p>
           </article>
         </section>
-        <section>
-          <h2>Desserts</h2>
-          <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/pie.jpg" alt="pie icon"/>
-          <article class="item">
-            <p class="dessert">Donut</p><p class="price">1.50</p>
-          </article>
-          <article class="item">
-            <p class="dessert">Cherry Pie</p><p class="price">2.75</p>
-          </article>
-          <article class="item">
-            <p class="dessert">Cheesecake</p><p class="price">3.00</p>
-          </article>
-          <article class="item">
-            <p class="dessert">Cinnamon Roll</p><p class="price">2.50</p>
-          </article>
-        </section>
+        
+        <h3><a href="index.html"><center>BACK</center></a></h3>
       </main>
       <hr class="bottom-line">
       <footer>
