--- a/veg.html
+++ b/veg.html
@@ -42,7 +42,7 @@
                 <p class="flavor">PANNER BHARTA</p><p class="price">150.00</p>
             </article>
             <article class="item">
-                <p class="flavor">PANNER CHILI</p><p class="price"><160.00/p>
+                <p class="flavor">PANNER CHILI</p><p class="price">160.00</p>
             </article>
                     
                 
