--- a/breakfast.html
+++ b/breakfast.html
@@ -77,9 +77,10 @@
       <hr class="bottom-line">
       <footer>
         <p>
-          <a href="https://www.google.com" target="_blank">Visit our website</a>
+          <a href="https://goo.gl/maps/KTURQWubdP8Smsza8" target="_blank">Visit Us , Our Location</a>
         </p>
-        <p class="address">12 SALT-LAKE , KOLKATA</p>
+        <p class="address"><b>Sridhar Basan, West Bengal 721151</b></p>
+    
       </footer>
     </div>
   </body>
