--- a/polao&briyani.html
+++ b/polao&briyani.html
@@ -52,8 +52,50 @@
                  <article class="item">
                     <p class="flavor">EGG BIRIYANI</p><p class="price">100.00</p>
                  </article>
-                   
-
+            <BR>
+            <H3>RICE</H3>   
+            <article class="item">
+               <p class="flavor">FINE RICE</p><p class="price">40.00</p>
+            </article>
+            <article class="item">
+               <p class="flavor">VEG FINE RICE</p><p class="price">70.00</p>
+            </article>
+            <article class="item">
+               <p class="flavor">JEERA RICE</p><p class="price">50.00</p>
+            </article>
+            <article class="item">
+               <p class="flavor">VEG FRIED RICE</p><p class="price">80.00</p>
+            </article>
+            <article class="item">
+               <p class="flavor">EGG FRIED RICE</p><p class="price">90.00</p>
+            </article>
+            <article class="item">
+               <p class="flavor">PANNER FRIED RICE</p><p class="price">110.00</p>
+            </article>
+            <article class="item">
+               <p class="flavor">CHICKEN FRIED RICE</p><p class="price">100.00</p>
+            </article>
+            <article class="item">
+               <p class="flavor">EGG CHICKEN FRIED RICE</p><p class="price">120.00</p>
+            </article>
+            <article class="item">
+               <p class="flavor">MIXED FRIED RICE</p><p class="price">140.00</p>
+            </article>
+            <article class="item">
+               <p class="flavor">VEG RICE</p><p class="price">60.00</p>
+            </article>
+            <article class="item">
+               <p class="flavor">EGG RICE</p><p class="price">90.00</p>
+            </article>
+            <article class="item">
+               <p class="flavor">FISH RICE</p><p class="price">100.00</p>
+            </article>
+            <article class="item">
+               <p class="flavor">CHICKEN RICE</p><p class="price">120.00</p>
+            </article>
+            <article class="item">
+               <p class="flavor">MUTTON RICE</p><p class="price">190.00</p>
+            </article>
                     
 
 
