--- a/veg.html
+++ b/veg.html
@@ -44,6 +44,40 @@
             <article class="item">
                 <p class="flavor">PANNER CHILI</p><p class="price">160.00</p>
             </article>
+
+          <h3> VEG</h3>
+
+          <br>
+          <article class="item">
+            <p class="flavor">ALU-DAM</p><p class="price">50.00</p>
+          </article>
+          <article class="item">
+          <p class="flavor">PUNJABI ALU-DAM</p><p class="price">90.00</p>
+          </article>
+          <article class="item">
+          <p class="flavor">KASHMIRI ALU-DAM</p><p class="price">80.00</p>
+          </article>
+          <article class="item">
+          <p class="flavor">MIXED VEG</p><p class="price">100.00</p>
+          </article>
+          <article class="item">
+          <p class="flavor">ALU PHULCAFI MASALA</p><p class="price">60.00</p>
+          </article>
+          <article class="item">
+          <p class="flavor">DAL FRY</p><p class="price">60.00</p>
+          </article>
+          <article class="item">
+          <p class="flavor">DAL MAKHNI</p><p class="price">70.00</p>
+          </article>
+          <article class="item">
+          <p class="flavor">VEG MANCHURIAN</p><p class="price">90.00</p>
+          </article>
+          <article class="item">
+          <p class="flavor">PANNER KOPTA</p><p class="price">150.00</p>
+          </article>
+          <article class="item">
+          <p class="flavor">PANNER MALAI KOPTA</p><p class="price">180.00</p>
+          </article>
                     
                 
 
