--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       
       <br><br><br><br><tr></tr>
       <p><a href="breakfast.html">BREAKFAST</a></p>
-      <p><a href="lunch.html"> LUNCH </a></p>
+      <p><a href="dinner.html"> CHOWMIN--MOGLAI--EGG </a></p>
       <p><a href="tandoori.html"> TANDOORI </a></p>
       <p><a href="snacks&Roll.html">SNACKS & ROLLS</a></p>
       <p><a href="nonVeg.html">NON-VEGETARIAN</a></p>
-      <p><a href="veg.html">PANNER & VEGETARIAN</a></p>
-      <p><a href="tarka&channa.html">TARKA & CHANNA</a></p>
-      <p><a href="polao&briyani.html">POLAO-BIRIYANI-RICE</a></p>
+      <p><a href="veg.html">PANNER-VEGETARIAN</a></p>
+      <p><a href="tarka&channa.html">TARKA-CHANNA</a></p>
+      <p><a href="polao&briyani.html">POLAO--BIRIYANI--RICE</a></p>
       <p><a href="curtesy.html">CURTESY</a></p>
       
 
